--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,19 @@
 {
 	"cSpell.words": [
+		"barcha",
+		"boshidamiz",
+		"buyuk",
 		"Do’konlar",
+		"Hamkorlarimiz",
+		"ishlarning",
 		"Kompaniya",
 		"Kontaktlar",
+		"Mahsulotlar",
+		"shunchaki",
+		"soni",
+		"Swiper",
+		"Tajribali",
+		"xodimlar",
 		"Yangiliklar",
 		"Zapchastlar"
 	]
