--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,30 @@
 {
 	"cSpell.words": [
+		"asboblar",
 		"barcha",
 		"boshidamiz",
 		"buyuk",
 		"Do’konlar",
+		"Elektr",
+		"etiladigan",
+		"etilganlar",
 		"Hamkorlarimiz",
 		"ishlarning",
+		"kategoriyalar",
 		"Kompaniya",
 		"Kontaktlar",
 		"Mahsulotlar",
+		"Mashhur",
+		"Perfodrel",
+		"Qo’l",
+		"Rhye",
 		"shunchaki",
 		"soni",
 		"Swiper",
 		"Tajribali",
+		"Tavsifi",
+		"Tavsiya",
+		"Uskunalar",
 		"xodimlar",
 		"Yangiliklar",
 		"Zapchastlar"
